(lang dune 3.7)

(name HashLife)

(generate_opam_files true)

(source
 (github lascar-pacagi/HashLife))

(authors "Pascal Garcia")

(maintainers "Pascal Garcia")

(license MIT License)

;(documentation https://url/to/documentation)

(package
 (name HashLife)
 (synopsis "Game of life")
 (description "Code used to understand the hashlife algorithm")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
